[package]
name = "helm-forge"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Helm chart generator backend for iac-forge"
homepage = "https://github.com/pleme-io/helm-forge"
repository = "https://github.com/pleme-io/helm-forge"
license = "MIT"
categories = ["development-tools"]
keywords = ["helm", "kubernetes", "codegen", "openapi", "iac"]

[lints.clippy]
pedantic = "warn"

[dependencies]
iac-forge = { git = "https://github.com/pleme-io/iac-forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
